--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
   push:
     tags: 
-      - 'release-*'
+      - 'r*'
 
 jobs:
   build:
@@ -22,10 +22,13 @@ jobs:
         with: 
           node-version: '12.x'
 
+      - name: Setup npm registry
+        run: |
+          npm config set "@fortawesome:registry" https://npm.fontawesome.com/
+          npm config set "//npm.fontawesome.com/:_authToken" "${{ secrets.FONTAWESOME_NPM }}"
+
       - name: Install dependencies
         run: | 
-          npm config set "@fontawesome:registry" https://npm.fontawesome.com/
-          npm config set "//npm.fontawesome.com/:_authToken" "${{ secrets.FONTAWESOME_NPM }}"
           npm ci
 
       - name: Build project
