--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
           npm ci
 
       - name: Build project
-        run: npm run build:ci
+        run: npm run build
 
       - name: Archive build
         if: success()
