--- a/firebase.json
+++ b/firebase.json
@@ -2,7 +2,7 @@
   "hosting": {
     "public": "dist/GenshinCalculator/",
     "ignore": [
-      "firebase.json",
+      "firebase.json"cls,
       "**/.*",
       "**/node_modules/**"
     ],
