fix issue in firebase json, add deploy script to npm

--- a/firebase.json
+++ b/firebase.json
@@ -2,7 +2,7 @@
   "hosting": {
     "public": "dist/GenshinCalculator/",
     "ignore": [
-      "firebase.json"cls,
+      "firebase.json",
       "**/.*",
       "**/node_modules/**"
     ],
