--- a/angular.json
+++ b/angular.json
@@ -29,6 +29,9 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "aot": true,
+            "allowedCommonJsDependencies": [
+              "tinycolor2"
+            ],
             "assets": [
               "src/favicon.ico",
               "src/assets",
