--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
     "@fortawesome/pro-regular-svg-icons": "^5.15.1",
     "@fortawesome/pro-solid-svg-icons": "^5.15.1",
     "bootstrap": "^3.4.1",
+    "http-browserify": "^1.7.0",
+    "https-browserify": "^1.0.0",
     "ng-zorro-antd": "^10.1.2",
     "pouchdb": "^7.2.2",
     "rxjs": "~6.6.0",
+    "stream-browserify": "^3.0.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
@@ -43,7 +46,6 @@
     "@angular/cli": "~11.0.0",
     "@angular/compiler-cli": "~11.0.0",
     "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
