--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@fortawesome/pro-regular-svg-icons": "^5.15.1",
     "@fortawesome/pro-solid-svg-icons": "^5.15.1",
     "bootstrap": "^3.4.1",
+    "imagekitio-angular": "^1.0.2",
     "ng-zorro-antd": "^10.1.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
