--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "deploy": "firebase deploy --only hosting",
+    "deploy:live": "ng build --prod && firebase deploy --only hosting",
     "deploy:preview": "firebase hosting:channel:deploy alpha"
   },
   "private": true,
