Finish cookieconsent implementation

--- a/angular.json
+++ b/angular.json
@@ -45,10 +45,13 @@
             ],
             "styles": [
               "src/theme.less",
+              "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.css"
+              "node_modules/cookieconsent/build/cookieconsent.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/cookieconsent/build/cookieconsent.min.js"
+            ]
           },
           "configurations": {
             "production": {
