--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "@fortawesome/pro-regular-svg-icons": "^5.15.1",
     "@fortawesome/pro-solid-svg-icons": "^5.15.1",
     "bootstrap": "^3.4.1",
+    "cookieconsent": "^3.1.1",
     "imagekitio-angular": "^1.0.2",
     "ng-zorro-antd": "^10.1.2",
+    "ngx-cookieconsent": "^2.2.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
