Add header collapse for progress and news

--- a/angular.json
+++ b/angular.json
@@ -50,7 +50,8 @@
               "node_modules/cookieconsent/build/cookieconsent.min.css"
             ],
             "scripts": [
-              "node_modules/cookieconsent/build/cookieconsent.min.js"
+              "node_modules/cookieconsent/build/cookieconsent.min.js",
+              "node_modules/marked/lib/marked.js"
             ]
           },
           "configurations": {
