--- a/package.json
+++ b/package.json
@@ -32,11 +32,15 @@
     "@fortawesome/pro-light-svg-icons": "^5.15.1",
     "@fortawesome/pro-regular-svg-icons": "^5.15.1",
     "@fortawesome/pro-solid-svg-icons": "^5.15.1",
+    "@tngtech/ngx-structurals": "^1.1.3",
     "bootstrap": "^3.4.1",
     "cookieconsent": "^3.1.1",
     "imagekitio-angular": "^1.0.2",
     "ng-zorro-antd": "^10.1.2",
     "ngx-cookieconsent": "^2.2.3",
+    "ngx-markdown": "^11.0.1",
+    "ngx-pipes": "^2.7.5",
+    "ngx-ssr-exclude": "^1.1.0",
     "ngx-google-analytics": "^11.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
