--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
-    "build:ci": "ng build --prod",
+    "patch_version": "node getVersionString.js",
+    "build": "npm run patch_version && ng build",
+    "build:ci": "npm run patch_version && ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -36,13 +37,14 @@
     "@tngtech/ngx-structurals": "^1.1.3",
     "bootstrap": "^3.4.1",
     "cookieconsent": "^3.1.1",
+    "git-commit-id": "^2.0.1",
     "imagekitio-angular": "^1.0.2",
     "ng-zorro-antd": "^10.1.2",
     "ngx-cookieconsent": "^2.2.3",
+    "ngx-google-analytics": "^11.0.0",
     "ngx-markdown": "^11.0.1",
     "ngx-pipes": "^2.7.5",
     "ngx-ssr-exclude": "^1.1.0",
-    "ngx-google-analytics": "^11.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
